--- a/index.html
+++ b/index.html
@@ -100,5 +100,15 @@
                 </div>
             </div>
         </div>
+        <div>
+            <select name="Latitude" id="Latitude">
+                <option value="Norte">Norte</option>
+                <option value="Sul">Sul</option>
+              </select>
+            <label class="longitude">Latitude:</label>
+            <input type="text">
+            <label>Longitude:</label>
+            <input type="text">
+        </div>
     </body>
 </html>
