--- a/index.html
+++ b/index.html
@@ -101,11 +101,15 @@
             </div>
         </div>
         <div>
-            <select name="Latitude" id="Latitude">
+             <select name="latitude" id="Latitude">
                 <option value="Norte">Norte</option>
                 <option value="Sul">Sul</option>
-              </select>
-            <label class="longitude">Latitude:</label>
+             </select>
+          <select name="Longitude" id="Longitude">
+            <option value="Oeste">Oeste</option>
+            <option value="Leste">Leste</option>
+          </select>
+            <label class="longitude">Longitude:</label>
             <input type="text">
             <label>Longitude:</label>
             <input type="text">
