--- a/index.html
+++ b/index.html
@@ -101,17 +101,19 @@
             </div>
         </div>
         <div>
+            <label class="latitude">Latitude:</label>
              <select name="latitude" id="Latitude">
                 <option value="Norte">Norte</option>
                 <option value="Sul">Sul</option>
              </select>
-          <select name="Longitude" id="Longitude">
+            <input type="text">
+        </div>
+        <div>
+            <label class="longitude">Longitude:</label>
+             <select name="Longitude" id="Longitude">
             <option value="Oeste">Oeste</option>
             <option value="Leste">Leste</option>
           </select>
-            <label class="longitude">Longitude:</label>
-            <input type="text">
-            <label>Longitude:</label>
             <input type="text">
         </div>
     </body>
