--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <option value="Norte">Norte</option>
                 <option value="Sul">Sul</option>
              </select>
-            <input type="text">
+            <input type="text"><br>
         </div>
         <div>
             <label class="longitude">Longitude:</label>
@@ -114,7 +114,8 @@
             <option value="Oeste">Oeste</option>
             <option value="Leste">Leste</option>
           </select>
-            <input type="text">
+            <input type="text"><br>
+            <button class="bucar_loc">Buscar</button>
         </div>
     </body>
 </html>
