--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@
                 </div>
             </div>
         </div>
-        <div>
+        <section class="apiStart">
+        <div class="apiLatitude">
+            <p>
+                Atenção!!! Recentemente o Discord criou uma nova utilidade para os usuários.<br>
+                Você foi sequestrado? Colocado em cativeiro? Drogado pela ex ciumenta? Nós te ajudamos!!<br>
+                Se não souber se está em terra firme, ou no meio do vasto oceano pacífico ao lado de cargas suspeitas, coloque as coordenadas:
+            </p>
             <label class="latitude">Latitude:</label>
              <select name="latitude" id="Latitude">
                 <option value="Norte">Norte</option>
@@ -108,7 +114,7 @@
              </select>
             <input type="text"><br>
         </div>
-        <div>
+        <div class="apiLongitude">
             <label class="longitude">Longitude:</label>
              <select name="Longitude" id="Longitude">
             <option value="Oeste">Oeste</option>
@@ -117,5 +123,6 @@
             <input type="text"><br>
             <button class="bucar_loc">Buscar</button>
         </div>
+        </section>
     </body>
 </html>
